Demo_app/example-internal-TLS-Ingress-controller-grafana-prometheous/5-prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx-private  # refernces ingressClass (pod, router, controller)
spec:
  tls:
  - hosts:
    - prometheus.internal.local
    secretName: prometheus-tls           # match Certificate.secretName
  rules:
  - host: prometheus.internal.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-k8s
            port:
              number: 9090
